--- a/en/meta.yml
+++ b/en/meta.yml
@@ -1,11 +1,13 @@
-title: my-test-project
+title: My test project
 hero_image: images/banner.png
-description: my-test-project description
+description: First practice project 
 version: 4
 listed: false
 copyedit: false
 last_tested: "2020-10-20"
 steps:
   - title: Introduction
-  - title: Step title
+  - title: Step 1
+  - title: Step 2
+  - title: Step 3
   - title: What next?
